# ffmpeg_ultra

./: .gitignore  README.md  hardware_report.txt  main.py  pyproject.toml  xxh视频压制工具v1.0.spec
config/: presets.yaml  tooltips.yaml
core/: __version__.py  engine.py  main_window.py  utils.py  worker.py
core/config/: presets.yaml  tooltips.yaml
test/: test_encoders.py
ui/: resources_rc.py  ui_main_window.py
ui/designer_ui/: main_window.ui
ui/resources/: resources.qrc
